# ChangeLog for net-proxy/dante
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-proxy/dante/ChangeLog,v 1.44 2009/02/28 09:53:41 mrness Exp $

*dante-1.1.19-r3 (28 Feb 2009)

  28 Feb 2009; Alin Năstac <mrness@gentoo.org> files/dante-sockd-init,
  -dante-1.1.19-r2.ebuild, +dante-1.1.19-r3.ebuild:
  Fix bashisms in dante-sockd init.d script (#260151).

  25 Jun 2008; Alin Năstac <mrness@gentoo.org>
  files/dante-1.1.19-libpam.patch:
  Remove AC_AIX from configure.ac (#229337).

*dante-1.1.19-r2 (24 Jun 2008)

  24 Jun 2008; Alin Năstac <mrness@gentoo.org>
  +files/dante-1.1.19-libpam.patch, dante-1.1.19-r1.ebuild,
  +dante-1.1.19-r2.ebuild:
  Add flex and bison dependency atoms (#221401). Link libpam only with sockd
  (#218745).

  03 Feb 2008; Fabian Groffen <grobian@gentoo.org> dante-1.1.19-r1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  17 Jun 2007; Alin Năstac <mrness@gentoo.org>
  -files/dante-1.1.18-socksify.patch, -dante-1.1.18.ebuild,
  dante-1.1.19-r1.ebuild:
  Remove obsolete version.

  14 Jun 2007; Raúl Porcel <armin76@gentoo.org> dante-1.1.19-r1.ebuild:
  alpha stable wrt #174115

  14 Jun 2007; Alin Năstac <mrness@gentoo.org> dante-1.1.19-r1.ebuild:
  Disable hack for 2.0 kernels (bug #174115 comment #8).

*dante-1.1.19-r1 (02 May 2007)

  02 May 2007; Alin Năstac <mrness@gentoo.org> files/dante-sockd-init,
  -dante-1.1.19.ebuild, +dante-1.1.19-r1.ebuild:
  Use default values for the parameters set in conf.d (#176548).

  22 Apr 2007; Alin Năstac <mrness@gentoo.org> dante-1.1.18.ebuild,
  dante-1.1.19.ebuild:
  Use newinitd and newconfd (#174266).

  21 Sep 2006; <blubb@gentoo.org> dante-1.1.19.ebuild:
  stable on amd64

  20 Sep 2006; Alin Nastac <mrness@gentoo.org>
  -files/dante-1.1.15-bindresvport.patch,
  -files/dante-1.1.15-getipnodebyname.patch,
  -files/dante-1.1.15-optionalpam.patch,
  -files/dante-1.1.15_pre1-socksify.patch, -dante-1.1.15-r1.ebuild,