@@ -1,13 +1,13 @@
-AUX dante-1.1.19-libpam.patch 1913 RMD160 6733683c8dae0a201908eca05d2b824442e2dff8 SHA1 c86f7c3ce3a10c3ca12fd4327f2026a56dbfee77 SHA256 324e36fdbaf3b2756d53f48f379121151db8c840546d0986a90f881fba119781
+AUX dante-1.1.19-libpam.patch 2688 RMD160 120d53814c7d9b51cad038ffd08e8794eb50b8dc SHA1 11f4807397c0e8a32ac3c55253f481f66e2344d5 SHA256 e78503cc9ece8347cfe0f11d77e0952bec9e2286dd1bea0916540f489d86ab54
 AUX dante-1.1.19-socksify.patch 811 RMD160 4edaad9e92f2ab689cf10b3decd2aa02d24d1f62 SHA1 d6e7ff6699691de9ee2ff836203e5628146ede06 SHA256 2e39a9cb13ae30eaf4129583dbd28d6df08133564aa679b81b5feb21532822d5
 AUX dante-sockd-conf 463 RMD160 037abbc191675c690c7219ffdec738405d1ea669 SHA1 5fd6b002b33ddec46f6d94550d3c7ea26a26f115 SHA256 b22c8261148fcb96cfd8942baa85633a790826a444920f7d87fc23d2dcf18a74
-AUX dante-sockd-init 1663 RMD160 d78329e5d5828b4b92ffea83995619eabac475a5 SHA1 f1df222eaba564cffb867082ef4293b89fa75d64 SHA256 7b43c6d417f001efea881ce53dd2a5be9e43201e93619a6fe18520ecf486680e
+AUX dante-sockd-init 1660 RMD160 8fe9aed45d614a691709ead7e72542cfa76417f5 SHA1 1143e90a30d470e3d91146c9ac588d82eaa2e263 SHA256 3297ab1d5a5b1d3324fdac27a626f34ca281aa2664ee9a779aa161dfa41fc2fa
 AUX sockd.conf 7031 RMD160 3ed9c0523eade831f01f867f8fea1889c2f429b6 SHA1 ef6f69870af7167d8b5c73577c0de5a41501d653 SHA256 3ea0e08ee7e5b018d1df1b83af92fb6051fb44a486e0822e28775d104bfcfee7
 AUX sockd.conf-with-libwrap.patch 870 RMD160 f34216f2542bf51563334e1fcaf87f9f687d6fe8 SHA1 c97d9843ef93184c91a69c78b9c09195c5cff232 SHA256 ba4bb30ad5933b890d1b09c6468708f37abf012de3f8696482d1c46c5c1f2978
 AUX sockd.conf-with-pam.patch 295 RMD160 67950c8d3fca41399540644ea47f549631868795 SHA1 599a82ffc4d52e93658dafc13682c9e8530c8a02 SHA256 e67499de8b976e17a9c7c0556e999e03f4bf06e8e57b78ba6dd41a128de0b719
 AUX socks.conf 4185 RMD160 1eaacd974befc24a22fa5f157528fffbfc54992c SHA1 f0f598706e44532f9884dbcadd54942b7acca45e SHA256 3dc8c06ca5a8309015c495ea50f62097ee6a605ac262665ffa5f19e0e8a5a9d8
 DIST dante-1.1.19.tar.gz 895713 RMD160 3649207b061b95fdd5b0950ea1ece9219eb8af4c SHA1 e366a60a880ceff6205f7cd87249c7322b844d3c SHA256 b49f0936282a14c41a03cd70158d1a11e6af3564a18d4b3337f291fb6dae0936
 EBUILD dante-1.1.19-r1.ebuild 2335 RMD160 05bf67ece00a1d01f918c553590a146cc8096658 SHA1 27cfd3d09c3b86d974245f4ee891c8ce1d3f1210 SHA256 616e91410f9ed7ad00430f60eea512ec1c365d190d4e395bff1ab1b3760b243a
-EBUILD dante-1.1.19-r3.ebuild 2362 RMD160 8a42a128f8113753c91538676921bfab25dfe94b SHA1 4e38ac61e73782143c08b5b25cc2dd745112de12 SHA256 8a4519f1f1c6db4c892caae86e4bfdf79ea60ee7bd2ee1304cf90eeb899bd6cc
-MISC ChangeLog 13298 RMD160 fc7f1e94e2c8f6060aed1e666fac0251a3d48e66 SHA1 5f29e7bcaaf369a4271d6a14de30ac2bbf19f8c3 SHA256 23dfe0bee46144ad6ca1fb2b6b9b100ed5b4d09e669201aedeebb40cba0c6bb3
+EBUILD dante-1.1.19-r4.ebuild 2362 RMD160 c000afb894100603c1eade5360b09668831e6b4a SHA1 25e9bb66dd22b36679216044ac070c28b7c2f64c SHA256 89d6b08243a25a1b4900cc6748d3dc68ef8555424b5b7e01f475266e924c1a0f
+MISC ChangeLog 13665 RMD160 384c5d47d520430e10b24280ae0c56aee2788f16 SHA1 2bcd68925fdce3bf5395a9de4fae68e8dba1640b SHA256 d0109f55ffa451b7b2249c217d94558b284b7fdd5731e1a287fec6d5ba4faadf
 MISC metadata.xml 246 RMD160 bf022485cb8a0289c3151fc974670fd86687d6be SHA1 c68b5b8a31dc103b0e7e8503671910b8bbe419d8 SHA256 7302ea59a7112d51c6936fa5aa83204412d7391441c729a54de3651b81c35add
