@@ -1,6 +1,16 @@
 # ChangeLog for net-proxy/dante
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-proxy/dante/ChangeLog,v 1.44 2009/02/28 09:53:41 mrness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-proxy/dante/ChangeLog,v 1.46 2009/03/06 20:12:09 mrness Exp $
+
+  06 Mar 2009; Alin Năstac <mrness@gentoo.org>
+  files/dante-1.1.19-libpam.patch:
+  Remove stupid env variable tests from configure.ac (#260618).
+
+*dante-1.1.19-r4 (05 Mar 2009)
+
+  05 Mar 2009; Alin Năstac <mrness@gentoo.org> files/dante-sockd-init,
+  -dante-1.1.19-r3.ebuild, +dante-1.1.19-r4.ebuild:
+  Second try to fix bashisms in dante-sockd script (#260151).
 
 *dante-1.1.19-r3 (28 Feb 2009)
 
